# pacpl-ppa

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.txt  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  codecs.conf  configure  configure.ac  pacpl  pacpl.conf  pacpl.in  slack-desc
debian/: README.Debian  changelog  control  copyright  not-installed  pacpl.install  rules  watch
debian/patches/: 10_twolame_mp3_enc.patch  20_codecs-conf.patch  30_readme_module.patch  40_add_jmac_ape.diff  40_change-normalize-to-normalize-audio.patch  45_case-independent-flac-tags.patch  50_add_jmac_ape.diff  50_replace-depreciated-switch-by-given-for-perl5.14.patch  60_twolame_mp2.diff  60_use-ogg-vorbis-header-pureperl.patch  70_use_audio_scan.patch  80-fix_enforce_outdir_switch_if_p_switch_is_used.patch  80_configure_exit_code  configure-exit0.patch  flac_decoding  multiple-format-input.patch  no_todo.patch  plugins.patch  series  typos.patch
debian/upstream/: metadata
extra/: README.chromebook  README.extra  README.module  ffmpeg-conf.sh  libav-conf.sh  mod-install-debian.sh  mod-install-ubuntu.sh  mod-install.sh
patches/: 0001-Choose-decoder-encoder-based-on-the-codec-and-not-th.patch  0001-Fix-installation-under-different-prefix-and-or-DESTD.patch  0002-Fix-hardwired-installation-paths-in-pacpl.patch  30_readme_module.patch  80-fix_enforce_outdir_switch_if_p_switch_is_used.patch  add_alac_decoder_m4a.patch  configure-exit0.patch  fix_config_value_0.patch  fix_decoding_string_ffmpeg.patch  fix_destination_always_overwritten.patch  fix_wma_tag_names.patch  flac_decoding.patch  multiple-format-input.patch  typos.patch
plugins/gnome/nautilus/: PACPL-Convert  install.sh
plugins/gnome/nemo/: install.sh  pacpl.nemo_action
plugins/gnome/thunar/: INSTALL  PACPL-Convert  PACPL-Konvert  install-gnome.sh  install-kde.sh
plugins/kde/: PACPL-Konvert  install.sh  pacpl.desktop
po/: GR.po  ca.po  de.po  en_US.po  es.po  et.po  fr_FR.po  it_IT.po  nl_NL.po  pl.po  pt.po  ro.po  ru_RU.po  tr.po  zh_CN.po
